--- a/gitops/applications/base/sc-storage/kyverno-policy.yaml
+++ b/gitops/applications/base/sc-storage/kyverno-policy.yaml
@@ -27,7 +27,7 @@ spec:
             template:
               metadata:
                 annotations:
-                  kyverno.platform.eon.com/triggerrestart: "{{request.object.metadata.resourceVersion}}"
+                  kyverno.platform.mojaloop.com/triggerrestart: "{{request.object.metadata.resourceVersion}}"
         targets:
         - apiVersion: apps/v1
           kind: Deployment
