first draft use cr for nbroutingpeer

--- a/gitops/applications/base/netbird-operator/kustomization.yaml
+++ b/gitops/applications/base/netbird-operator/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - nbopbootstrap-claim.yaml
   - nboppost-claim.yaml
   - kyverno-policy.yaml
+  - netbirdroutingpeer.yaml
 helmCharts:
   - name: kubernetes-operator
     releaseName: ${ARGOCD_ENV_netbird_operator_app_name}
