--- a/gitops/applications/base/netbird-operator/netbirdroutingpeer.yaml
+++ b/gitops/applications/base/netbird-operator/netbirdroutingpeer.yaml
@@ -1,6 +1,9 @@
 apiVersion: netbird.io/v1
 kind: NBRoutingPeer
 metadata:
+  annotations:
+    helm.sh/hook: "pre-delete"
+    argocd.argoproj.io/sync-options: "PruneLast=true"
   finalizers:
     - netbird.io/cleanup
   labels:
