--- a/gitops/test/netbirdroutingpeer.yaml
+++ b/gitops/test/netbirdroutingpeer.yaml
@@ -3,6 +3,7 @@ kind: NBRoutingPeer
 metadata:
   annotations:
     helm.sh/hook: "pre-delete"
+    argocd.argoproj.io/sync-options: "ServerSideApply=true"
   finalizers:
     - netbird.io/cleanup
   labels:
