--- a/gitops/test/netbirdroutingpeer.yaml
+++ b/gitops/test/netbirdroutingpeer.yaml
@@ -2,7 +2,7 @@ apiVersion: netbird.io/v1
 kind: NBRoutingPeer
 metadata:
   annotations:
-    test: "test"
+    argocd.argoproj.io/hook: "PreDelete"
   finalizers:
     - netbird.io/cleanup
   labels:
