--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -33,7 +33,6 @@ prometheus:
 
 kubelet:
   serviceMonitor:
-    # interval: 60s
     relabelings:
       # adds kubernetes_io_hostname label being used by k8s monitoring dashboard
       - sourceLabels: [node]
@@ -42,11 +41,55 @@ kubelet:
         targetLabel: kubernetes_io_hostname
         replacement: "${1}"
         action: replace
+    metricRelabelings:
+    - sourceLabels: ['__name__']
+      regex: 'apiserver_request_duration_seconds_bucket|apiserver_request_sli_duration_seconds_bucket'
+      action: drop
+    - sourceLabels: ['__name__']
+      regex: 'apiserver_request_body_size_bytes_bucket|apiserver_response_sizes_bucket'
+      action: drop
+    - sourceLabels: ['__name__']
+      regex: 'etcd_request_duration_seconds_bucket|apiserver_watch_events_sizes_bucket'
+      action: drop
+    - regex: endpoint|service
+      action: labeldrop
+    cAdvisorMetricRelabelings:
+    - sourceLabels: ['__name__']
+      regex: 'container_tasks_state|container_memory_failures_total|container_blkio_device_usage_total'
+      action: drop
+    - regex: endpoint|service|id
+      action: labeldrop
+    # remove name label with hexadecimal values only
+    - sourceLabels: [name]
+      regex: '^[a-f0-9]{64}$'
+      targetLabel: name
+      replacement: ''
+      action: replace
+
+kubeApiServer:
+  enabled: false
+
+kube-state-metrics:
+  serviceMonitor:
+    relabelings:
+    # NOTE: there are valid endpoint and service labels. Therefore, labeldrop can not be used.
+    - sourceLabels: [endpoint]
+      regex: http
+      targetLabel: endpoint
+      replacement: ''
+      action: replace
+    - sourceLabels: [service]
+      regex: prom-kube-state-metrics
+      targetLabel: service
+      replacement: ''
+      action: replace
+    metricRelabelings:
+    - regex: container_id|uid
+      action: labeldrop
 
 
 node-exporter:
   serviceMonitor:
-    # interval: 60s
     relabelings:
       - sourceLabels: [__meta_kubernetes_pod_node_name]
         targetLabel: nodename
@@ -56,6 +99,8 @@ node-exporter:
         targetLabel: instance
         replacement: "${1}"
         action: replace
+      - regex: endpoint|service
+        action: labeldrop
   tolerations:
     - operator: "Exists"
 blackboxExporter:
