--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -113,3 +113,12 @@ spec:
   # package: ghcr.io/mojaloop/iac-crossplane-packages/zitadel-config:${ARGOCD_ENV_crossplane_packages_zitadel_config_version}
   package: ghcr.io/mojaloop/iac-crossplane-packages/zitadel-config:v0.1.0-pr62-15303275312 # TODO: Temporary
   skipDependencyResolution: true
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: grafana-config
+spec:
+  # package: ghcr.io/mojaloop/iac-crossplane-packages/grafana-config:${ARGOCD_ENV_crossplane_packages_grafana_config_version}
+  package: ghcr.io/mojaloop/iac-crossplane-packages/grafana-config:v0.1.0-pr62-15394923122 # TODO: Temporary
+  skipDependencyResolution: true
