--- a/gitops/argo-apps/base/crossplane-packages.yaml
+++ b/gitops/argo-apps/base/crossplane-packages.yaml
@@ -76,3 +76,6 @@ spec:
 
         - name: "crossplane_packages_zitadel_config_version"
           value: "${ARGOCD_ENV_utils_crossplane_packages_zitadel_config_version}"
+
+        - name: "crossplane_packages_grafana_config_version"
+          value: "${ARGOCD_ENV_utils_crossplane_packages_grafana_config_version}"
