feat: add grafana provider and package

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -90,6 +90,7 @@ istio_helm_version: "1.22.1"
 external_secrets_helm_version: "0.15.1"
 crossplane_providers_vault_version: "2.1.1"
 crossplane_providers_gitlab_version: "0.10.3"
+crossplane_providers_grafana_version: "0.28.0"
 crossplane_providers_terraform_version: "0.16.0"
 crossplane_providers_ansible_version: "0.6.0"
 crossplane_providers_k8s_version: "0.18.0"
@@ -114,7 +115,7 @@ crossplane_functions_extra_resources_version: "0.0.3"
 crossplane_packages_objectstores_version: "v0.1.1"
 crossplane_packages_utils_version: "v0.6.0"
 crossplane_packages_gitlab_version: "v0.3.3"
-
+crossplane_packages_grafana_config_version: "v0.1.0-pr62-15394923122"
 crossplane_packages_vault_config_version: "v0.1.0"
 crossplane_packages_sc_postgres_version: "v0.2.0-pr71-14928307069"
 crossplane_packages_sc_mysql_version: "v0.2.0"
