--- a/gitops/applications/base/monitoring-post-config/kustomization.yaml
+++ b/gitops/applications/base/monitoring-post-config/kustomization.yaml
@@ -5,7 +5,9 @@ resources:
   - grafana-crs.yaml
   - virtual-service.yaml
   - vault-secrets.yaml
-  - grafana-oidc-xplane-terraform.yaml
+  - grafana-provider-config.yaml
+  - grafana-oidc.yaml
+  # - grafana-oidc-xplane-terraform.yaml
   # - dashboards-aws-managed-svs.yaml
   - dashboards-default.yaml
   - dashboards-infra.yaml
