--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -69,7 +69,7 @@ metadata:
   name: gitlab
 spec:
   # package: ghcr.io/mojaloop/iac-crossplane-packages/gitlab:${ARGOCD_ENV_crossplane_packages_gitlab_version}
-  package: ghcr.io/mojaloop/iac-crossplane-packages/gitlab:v0.3.3-pr62-15344123874 # TODO: Temporary
+  package: ghcr.io/mojaloop/iac-crossplane-packages/gitlab:v0.3.3-pr62-15398640387 # TODO: Temporary
   skipDependencyResolution: true
 ---
 apiVersion: pkg.crossplane.io/v1
@@ -77,7 +77,8 @@ kind: Configuration
 metadata:
   name: vault-config
 spec:
-  package: ghcr.io/mojaloop/iac-crossplane-packages/vault-config:${ARGOCD_ENV_crossplane_packages_vault_config_version}
+  # package: ghcr.io/mojaloop/iac-crossplane-packages/vault-config:${ARGOCD_ENV_crossplane_packages_vault_config_version}
+  package: ghcr.io/mojaloop/iac-crossplane-packages/vault-config:v0.1.0-pr62-15398640387 # TODO: Temporary
   skipDependencyResolution: true
 ---
 apiVersion: pkg.crossplane.io/v1
@@ -102,7 +103,7 @@ metadata:
   name: argocd-config
 spec:
   # package: ghcr.io/mojaloop/iac-crossplane-packages/argocd-config:${ARGOCD_ENV_crossplane_packages_argocd_config_version}
-  package: ghcr.io/mojaloop/iac-crossplane-packages/argocd-config:v0.1.0-pr62-15328323581 # TODO: Temporary
+  package: ghcr.io/mojaloop/iac-crossplane-packages/argocd-config:v0.1.0-pr62-15398640387 # TODO: Temporary
   skipDependencyResolution: true
 ---
 apiVersion: pkg.crossplane.io/v1
@@ -111,7 +112,7 @@ metadata:
   name: zitadel-config
 spec:
   # package: ghcr.io/mojaloop/iac-crossplane-packages/zitadel-config:${ARGOCD_ENV_crossplane_packages_zitadel_config_version}
-  package: ghcr.io/mojaloop/iac-crossplane-packages/zitadel-config:v0.1.0-pr62-15303275312 # TODO: Temporary
+  package: ghcr.io/mojaloop/iac-crossplane-packages/zitadel-config:v0.1.0-pr62-15398640387 # TODO: Temporary
   skipDependencyResolution: true
 ---
 apiVersion: pkg.crossplane.io/v1
@@ -120,5 +121,5 @@ metadata:
   name: grafana-config
 spec:
   # package: ghcr.io/mojaloop/iac-crossplane-packages/grafana-config:${ARGOCD_ENV_crossplane_packages_grafana_config_version}
-  package: ghcr.io/mojaloop/iac-crossplane-packages/grafana-config:v0.1.0-pr62-15394923122 # TODO: Temporary
+  package: ghcr.io/mojaloop/iac-crossplane-packages/grafana-config:v0.1.0-pr62-15398640387 # TODO: Temporary
   skipDependencyResolution: true
