--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
@@ -154,7 +154,7 @@ spec:
           firewall: true
           model: virtio
           tag: ${ARGOCD_ENV_capi_cluster_proxmox_host_vlan}
-        rootDisk: "50G"
+        rootDisk: ${ARGOCD_ENV_capi_os_disk_size}
       options:
         onBoot: true
       network:
