include velero post config

--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -37,6 +37,7 @@ resources:
   # velero
   - ../../../base/velero-pre.yaml
   - ../../../base/velero.yaml
+  - ../../../base/velero-post-config.yaml
 
   # security
   - ../../../base/zitadel-pre.yaml
