--- a/gitops/applications/base/monitoring-post-config/dashboards-infra.yaml
+++ b/gitops/applications/base/monitoring-post-config/dashboards-infra.yaml
@@ -79,3 +79,14 @@ spec:
       dashboards: "grafana"
   url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/deployment-report.json"
 ---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: "networking-cost-estimation"
+spec:
+  folder: infra
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
+  url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/networking-cost-estimation.json"
+---
