--- a/gitops/applications/base/monitoring-post-config/grafana-oidc.yaml
+++ b/gitops/applications/base/monitoring-post-config/grafana-oidc.yaml
@@ -17,6 +17,10 @@ spec:
     adminRbacGroup: "${ARGOCD_ENV_admin_rbac_group}"
     userRbacGroup: "${ARGOCD_ENV_user_rbac_group}"
     oidcProviderGroupClaimPrefix: "${ARGOCD_ENV_zitadel_grant_prefix}"
+    organizationIdSecretRef: # TODO: FIX
+      name: ${ARGOCD_ENV_zitadel_post_config_init_output_secret}
+      namespace: ${ARGOCD_ENV_zitadel_namespace}
+      key: zitadel_org_id
   providerConfigsRef:
     zitadelProviderName: "zitadel-provider"
     kubernetesProviderName: "kubernetes-provider"
