--- a/gitops/applications/base/zitadel-post-config/argocd-oidc.yaml
+++ b/gitops/applications/base/zitadel-post-config/argocd-oidc.yaml
@@ -17,6 +17,7 @@ spec:
       key: zitadel_admin_human_user_id
     adminRbacGroup: "${ARGOCD_ENV_argocd_admin_rbac_group}"
     userRbacGroup: "${ARGOCD_ENV_argocd_user_rbac_group}"
+    oidcProviderGroupClaimPrefix: "${ARGOCD_ENV_zitadel_grant_prefix}"
     organizationIdSecretRef:
       name: ${ARGOCD_ENV_zitadel_post_config_init_output_secret}
       namespace: ${ARGOCD_ENV_zitadel_namespace}
