--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -159,6 +159,9 @@ spec:
           - name: "zitadel_post_config_output_secret"
             value: "${ARGOCD_ENV_security_zitadel_zitadel_post_config_output_secret}"
 
+          - name: "zitadel_post_config_init_output_secret"
+            value: "zitadel-post-config-init-output"
+
           - name: "zitadel_grant_prefix"
             value: "${ARGOCD_ENV_security_zitadel_zitadel_grant_prefix}"
 
