--- a/gitops/argo-apps/base/monitoring-post-config.yaml
+++ b/gitops/argo-apps/base/monitoring-post-config.yaml
@@ -49,6 +49,9 @@ spec:
         - name: "zitadel_post_config_output_secret"
           value: "${ARGOCD_ENV_security_zitadel_zitadel_post_config_output_secret}"
 
+        - name: "zitadel_post_config_init_output_secret"
+          value: "zitadel-post-config-init-output"
+
         - name: "zitadel_namespace"
           value: "${ARGOCD_ENV_security_zitadel_namespace}"
 
