--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -486,5 +486,5 @@ capi_calico_helm_version: "v3.30.0"
 #backup
 cc_backup_bucket: "control-center-backup"
 cc_backup_bucket_storage_size: "30Gi"
-cc_backup_schedule: "0 1 * * *"
+cc_backup_schedule: "0 * * * *"
 cc_backup_ttl: "24h0m0s"
