--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -24,6 +24,8 @@ prometheus:
       url: http://central-monitoring-grafana-mimir-gateway/api/v1/push
       headers:
         X-Scope-OrgID: ${ARGOCD_ENV_remote_write_tenant_id}
+      metadataConfig:
+        sendInterval: ${ARGOCD_ENV_prometheus_scrape_interval}
   remoteRead:
     - name: central-monitoring
       url: http://central-monitoring-grafana-mimir-gateway/prometheus/api/v1/read
