--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -62,12 +62,18 @@ kubelet:
     - sourceLabels: ['__name__']
       regex: 'container_tasks_state|container_memory_failures_total|container_blkio_device_usage_total'
       action: drop
-    - regex: endpoint|service|id
+    - regex: endpoint|service
       action: labeldrop
     # remove name label with hexadecimal values only
     - sourceLabels: [name]
       regex: '^[a-f0-9]{64}$'
       targetLabel: name
+      replacement: ''
+      action: replace
+    # removing id entirely make ambiguous series
+    - sourceLabels: [id]
+      regex: '.+/pod.+'
+      targetLabel: id
       replacement: ''
       action: replace
 
