feat:  k8s crossplane oidc

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -134,6 +134,7 @@ coredns_localcache_version: "1.12.1"
 
 crossplane_packages_argocd_config_version: "v0.1.0-pr62-15117476143"
 crossplane_packages_zitadel_config_version: "v0.1.0-pr62-15260504679"
+crossplane_packages_k8s_config_version: "v0.1.0-pr83-15389360002"
 
 kyverno_helm_version: "3.3.7"
 
