--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -123,3 +123,12 @@ spec:
   # package: ghcr.io/mojaloop/iac-crossplane-packages/grafana-config:${ARGOCD_ENV_crossplane_packages_grafana_config_version}
   package: ghcr.io/mojaloop/iac-crossplane-packages/grafana-config:v0.1.0-pr62-15446239878 # TODO: Temporary
   skipDependencyResolution: true
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: k8s-config
+spec:
+  # package: ghcr.io/mojaloop/iac-crossplane-packages/k8s-config:${ARGOCD_ENV_crossplane_packages_k8s_config_version}
+  package: ghcr.io/mojaloop/iac-crossplane-packages/k8s-config:v0.1.0-pr83-15389360002 # TODO: Temporary
+  skipDependencyResolution: true
