--- a/gitops/argo-apps/base/crossplane-packages.yaml
+++ b/gitops/argo-apps/base/crossplane-packages.yaml
@@ -79,3 +79,6 @@ spec:
 
         - name: "crossplane_packages_grafana_config_version"
           value: "${ARGOCD_ENV_utils_crossplane_packages_grafana_config_version}"
+
+        - name: "crossplane_packages_k8s_config_version"
+          value: "${ARGOCD_ENV_utils_crossplane_packages_k8s_config_version}"
