--- a/gitops/applications/base/zitadel-post-config/kustomization.yaml
+++ b/gitops/applications/base/zitadel-post-config/kustomization.yaml
@@ -5,7 +5,8 @@ resources:
   - zitadel-xplane-terraform.yaml
   # - vault-oidc-xplane-terraform.yaml
   # - argocd-oidc-xplane-terraform.yaml
-  - k8s-oidc-xplane-terraform.yaml
+  #- k8s-oidc-xplane-terraform.yaml
   - zitadel-xplane-providerconfig.yaml
   - argocd-oidc.yaml
   - vault-oidc.yaml
+  - k8s-oidc.yaml
