--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -104,6 +104,9 @@ spec:
         - name: "capi_cluster_proxmox_worker_replicas"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_worker_replicas}"
 
+        - name: "capi_cluster_proxmox_control_plane_replicas"
+          value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_control_plane_replicas}"
+
         - name: "capi_cluster_proxmox_user"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_user}"
 
@@ -121,7 +124,7 @@ spec:
 
         - name: "capi_cluster_proxmox_ceph_volume"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_proxmox_ceph_volume}"
-          
+
         - name: "capi_os_disk_size"
           value: "${ARGOCD_ENV_utils_capi_capi_os_disk_size}"
 
