--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -461,6 +461,7 @@ aws_ebs_csi_driver_helm_version: "2.39.0"
 capi_infra_provider_version: "0.4.5"
 capi_cluster_proxmox_worker_cpu: "'8'"
 capi_cluster_proxmox_worker_memory: "'32768'"
+capi_cluster_proxmox_control_plane_replicas: "'1'"
 capi_cluster_proxmox_worker_replicas: "'3'"
 capi_cluster_proxmox_control_plane_memory: "'8192'"
 capi_cluster_proxmox_control_plane_cpu: "'2'"
