feat: change in object storage

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -488,3 +488,4 @@ cc_backup_bucket: "control-center-backup"
 cc_backup_bucket_storage_size: "30Gi"
 cc_backup_schedule: "0 * * * *"
 cc_backup_ttl: "24h0m0s"
+cc_backup_object_storage_provider: "s3"
