--- a/gitops/applications/base/velero-pre/backup-bucket.yaml
+++ b/gitops/applications/base/velero-pre/backup-bucket.yaml
@@ -112,3 +112,4 @@ spec:
           [default]
           aws_access_key_id = {{ .username | toString }}
           aws_secret_access_key = {{ .password  | toString }}
+          aws_region = ${ARGOCD_ENV_object_storage_region}
