--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
@@ -156,7 +156,7 @@ spec:
 
           # Nothing to do for kubernetes < v1.29
           KUBEADM_MINOR="$(kubeadm version -o short | cut -d '.' -f 2)"
-          if [[ "$KUBEADM_MINOR" -lt "29" ]]; then
+          if [[ "$$KUBEADM_MINOR" -lt "29" ]]; then
             exit 0
           fi
 
