--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
@@ -131,34 +131,15 @@ spec:
           status: {}
         owner: root:root
         path: /etc/kubernetes/manifests/kube-vip.yaml
+
       - path: /etc/kube-vip-prepare.sh
         content: |
           #!/bin/bash
-
-          # Copyright 2020 The Kubernetes Authors.
-          #
-          # Licensed under the Apache License, Version 2.0 (the "License");
-          # you may not use this file except in compliance with the License.
-          # You may obtain a copy of the License at
-          #
-          #     http://www.apache.org/licenses/LICENSE-2.0
-          #
-          # Unless required by applicable law or agreed to in writing, software
-          # distributed under the License is distributed on an "AS IS" BASIS,
-          # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-          # See the License for the specific language governing permissions and
-          # limitations under the License.
-
           set -e
 
-          # Configure the workaround required for kubeadm init with kube-vip:
+          # Perms workaround required for kubeadm init with kube-vip:
           # xref: https://github.com/kube-vip/kube-vip/issues/684
 
-          # Nothing to do for kubernetes < v1.29
-          KUBEADM_MINOR="$(kubeadm version -o short | cut -d '.' -f 2)"
-          if [[ "$KUBEADM_MINOR" -lt "29" ]]; then
-            exit 0
-          fi
 
           IS_KUBEADM_INIT="false"
 
@@ -178,6 +159,7 @@ spec:
           fi
         owner: root:root
         permissions: "0700"
+
     preKubeadmCommands:
       - /etc/kube-vip-prepare.sh
     initConfiguration:
