--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
@@ -106,7 +106,7 @@ spec:
                 value: "10"
               - name: vip_retryperiod
                 value: "2"
-              image: ghcr.io/kube-vip/kube-vip:v0.7.1
+              image: ghcr.io/kube-vip/kube-vip:v0.9.1
               imagePullPolicy: IfNotPresent
               name: kube-vip
               resources: {}
@@ -132,42 +132,32 @@ spec:
           status: {}
         owner: root:root
         path: /etc/kubernetes/manifests/kube-vip.yaml
+      - path: /etc/kube-vip-prepare.sh
+        content: |
+          #!/bin/bash
+          set -e
 
-      # - path: /etc/kube-vip-prepare.sh
-      #   content: |
-      #     #!/bin/bash
-      #     set -e
+          # Perms workaround required for kubeadm init with kube-vip:
+          # xref: https://github.com/kube-vip/kube-vip/issues/684
 
-      #     # Perms workaround required for kubeadm init with kube-vip:
-      #     # xref: https://github.com/kube-vip/kube-vip/issues/684
+          IS_KUBEADM_INIT="false"
 
-      #     IS_KUBEADM_INIT="false"
+          # cloud-init kubeadm init
+          if [[ -f /run/kubeadm/kubeadm.yaml ]]; then
+            IS_KUBEADM_INIT="true"
+          fi
 
-      #     # cloud-init kubeadm init
-      #     if [[ -f /run/kubeadm/kubeadm.yaml ]]; then
-      #       IS_KUBEADM_INIT="true"
-      #     fi
+          # ignition kubeadm init
+          if [[ -f /etc/kubeadm.sh ]] && grep -q -e "kubeadm init" /etc/kubeadm.sh; then
+            IS_KUBEADM_INIT="true"
+          fi
 
-      #     # ignition kubeadm init
-      #     if [[ -f /etc/kubeadm.sh ]] && grep -q -e "kubeadm init" /etc/kubeadm.sh; then
-      #       IS_KUBEADM_INIT="true"
-      #     fi
-
-      #     if [[ "$IS_KUBEADM_INIT" == "true" ]]; then
-      #       sed -i 's#path: /etc/kubernetes/admin.conf#path: /etc/kubernetes/super-admin.conf#' \
-      #         /etc/kubernetes/manifests/kube-vip.yaml
-      #     fi
-      #   owner: root:root
-      #   permissions: "0700"
-    initConfiguration:
-      nodeRegistration:
-        kubeletExtraArgs:
-          provider-id: "proxmox://'{{ ds.meta_data.instance_id }}'"
-    joinConfiguration:
-      nodeRegistration:
-        kubeletExtraArgs:
-          provider-id: "proxmox://'{{ ds.meta_data.instance_id }}'"
-  version: "${KUBERNETES_VERSION}"
+          if [[ "$IS_KUBEADM_INIT" == "true" ]]; then
+            sed -i 's#path: /etc/kubernetes/admin.conf#path: /etc/kubernetes/super-admin.conf#' \
+              /etc/kubernetes/manifests/kube-vip.yaml
+          fi
+        owner: root:root
+        permissions: "0700"
     postKubeadmCommands:
       - "curl -L https://dl.k8s.io/release/v${ARGOCD_ENV_capi_cluster_kube_version}/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl"
       - "chmod +x /usr/local/bin/kubectl"
