--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -96,7 +96,7 @@ crossplane_providers_ansible_version: "0.6.0"
 crossplane_providers_k8s_version: "0.18.0"
 crossplane_providers_helm_version: "0.20.4"
 crossplane_providers_netbird_version: "0.1.0"
-crossplane_providers_zitadel_version: "0.0.1-rc01"
+crossplane_providers_zitadel_version: "0.0.1"
 crossplane_providers_aws_version: "0.49.2"
 crossplane_providers_aws_family_version: "1.21.1"
 crossplane_providers_aws_s3_version: "1.21.0"
@@ -112,9 +112,9 @@ crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_functions_extra_resources_version: "0.0.3"
 crossplane_packages_objectstores_version: "v0.1.1"
 crossplane_packages_utils_version: "v0.6.0"
-crossplane_packages_gitlab_version: "v0.3.3"
-crossplane_packages_grafana_config_version: "v0.1.0-pr62-15394923122"
-crossplane_packages_vault_config_version: "v0.1.0"
+crossplane_packages_gitlab_version: "v0.4.0"
+crossplane_packages_grafana_config_version: "v0.1.0"
+crossplane_packages_vault_config_version: "v0.2.0"
 crossplane_packages_sc_postgres_version: "v0.2.0-pr71-14928307069"
 crossplane_packages_sc_mysql_version: "v0.2.0"
 crossplane_packages_sc_mongodb_version: "v0.2.0"
@@ -123,8 +123,8 @@ crossplane_packages_sc_nboperatorinstall_version: "v0.1.0"
 crossplane_packages_nb_config_version: "v0.1.4"
 crossplane_packages_aws_documentdb_version: "v0.4.0"
 crossplane_packages_aws_rds_version: "v0.2.0"
-crossplane_packages_argocd_config_version: "v0.1.0-pr62-15117476143"
-crossplane_packages_zitadel_config_version: "v0.1.0-pr62-15260504679"
+crossplane_packages_argocd_config_version: "v0.1.0"
+crossplane_packages_zitadel_config_version: "v0.1.0"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
