--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
@@ -106,7 +106,7 @@ spec:
                 value: "10"
               - name: vip_retryperiod
                 value: "2"
-              image: ghcr.io/kube-vip/kube-vip:v0.9.1
+              image: ghcr.io/kube-vip/kube-vip:${ARGOCD_ENV_capi_kube_vip_version}
               imagePullPolicy: IfNotPresent
               name: kube-vip
               resources: {}
