--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -26,45 +26,45 @@ resources:
   - ../../../base/xplane-provider-config.yaml
 
   # vault
-  # - ../../../base/vault.yaml
-  # - ../../../base/vault-post-config.yaml
+  - ../../../base/vault.yaml
+  - ../../../base/vault-post-config.yaml
 
-  # # dns-utils
-  # - ../../../base/dns-utils.yaml
-  # - ../../../base/dns-utils-post-config.yaml
-  # - ../../../base/dns-utils-pre.yaml
+  # dns-utils
+  - ../../../base/dns-utils.yaml
+  - ../../../base/dns-utils-post-config.yaml
+  - ../../../base/dns-utils-pre.yaml
 
-  # # velero
-  # - ../../../base/velero-pre.yaml
-  # - ../../../base/velero.yaml
-  # - ../../../base/velero-post-config.yaml
+  # velero
+  - ../../../base/velero-pre.yaml
+  - ../../../base/velero.yaml
+  - ../../../base/velero-post-config.yaml
 
-  # # security
-  # - ../../../base/zitadel-pre.yaml
-  # - ../../../base/zitadel.yaml
-  # - ../../../base/zitadel-post-config.yaml
-  # - ../../../base/netbird-pre.yaml
-  # - ../../../base/netbird.yaml
-  # - ../../../base/netbird-post-config.yaml
-  # - ../../../base/netbird-operator.yaml
+  # security
+  - ../../../base/zitadel-pre.yaml
+  - ../../../base/zitadel.yaml
+  - ../../../base/zitadel-post-config.yaml
+  - ../../../base/netbird-pre.yaml
+  - ../../../base/netbird.yaml
+  - ../../../base/netbird-post-config.yaml
+  - ../../../base/netbird-operator.yaml
 
-  # # nexus
-  # - ../../../base/nexus.yaml
-  # - ../../../base/nexus-pre.yaml
-  # - ../../../base/nexus-post-config.yaml
+  # nexus
+  - ../../../base/nexus.yaml
+  - ../../../base/nexus-pre.yaml
+  - ../../../base/nexus-post-config.yaml
 
-  # # gitlab
-  # - ../../../base/gitlab-pre.yaml
-  # - ../../../base/gitlab.yaml
-  # - ../../../base/gitlab-post-config.yaml
+  # gitlab
+  - ../../../base/gitlab-pre.yaml
+  - ../../../base/gitlab.yaml
+  - ../../../base/gitlab-post-config.yaml
 
-  # # deploy-env
-  # - ../../../base/deploy-env.yaml
+  # deploy-env
+  - ../../../base/deploy-env.yaml
 
-  # # monitoring
-  # - ../../../base/monitoring-pre.yaml
-  # - ../../../base/monitoring.yaml
-  # - ../../../base/monitoring-post-config.yaml
+  # monitoring
+  - ../../../base/monitoring-pre.yaml
+  - ../../../base/monitoring.yaml
+  - ../../../base/monitoring-post-config.yaml
 
-  # # k8s
-  # - ../../../base/k8s-post-config.yaml
+  # k8s
+  - ../../../base/k8s-post-config.yaml
