--- a/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/db/db-secrets.yaml
@@ -49,7 +49,7 @@ spec:
 apiVersion: redhatcop.redhat.io/v1alpha1
 kind: VaultSecret
 metadata:
-  name: ${ARGOCD_ENV_db_secret}
+  name: ${ARGOCD_ENV_dbdeploy_name_prefix}-${ARGOCD_ENV_db_secret}
   namespace: ${ARGOCD_ENV_vault_namespace}
 spec:
   refreshPeriod: 1m0s
