--- a/gitops/applications/base/monitoring-post-config/dashboards-k8s.yaml
+++ b/gitops/applications/base/monitoring-post-config/dashboards-k8s.yaml
@@ -117,3 +117,14 @@ spec:
     id: 15760
     revision: 26
 ---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: network-quick-view
+spec:
+  folder: kubernetes
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
+  url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/network-quick-view.json"
+---
