--- a/gitops/argo-apps/base/gitlab.yaml
+++ b/gitops/argo-apps/base/gitlab.yaml
@@ -128,3 +128,9 @@ spec:
 
         - name: "object_storage_host"
           value: "${ARGOCD_ENV_utils_storage_object_storage_host}"
+
+        - name: "object_storage_path_style"
+          value: "${ARGOCD_ENV_utils_storage_object_storage_path_style}"
+
+        - name: "object_store_insecure_connection"
+          value: "${ARGOCD_ENV_utils_storage_object_store_insecure_connection}"
